Changelog 2015-08-17

* fixing, only for old release 2.3.1, the scale issue with the self.qcl object.

ChangeLog 2014-01-24

* Fixed Condor submit plugin initialization hierarchy. 

* Switched from os.getlogin() to pwd.

ChangeLog 2014-01-02
--------

* adjustments to init.d script to improve error codes/detection

* proxymanager.sleep and remote_* config vars added to -example files. 

ChangeLog 2013-12-03
---------

* sched plugin Activated deleted

* bug fixed in method fill() in info.py to prevent an Exception when the dictionary has an unknown key.

* CondorEC2 BatchSubmit and BatchStatus plugins usable, supporting standard Condor ec2 grid type. Assuming VMs join local pool as startds, features correlation of VM jobs and corresponding startd. VM retirement via 'condor_off -peaceful' and VM shutdown when stard is retired. 

* KeepNRunning sched plugin to convert absolute to relative numbers. 

* utils not distributed anymore within the RPM. They will be distributed with a dedicated one.

* Removed reference to Panda cloud status in StatusOfflineSchedPlugin

* created apf-simulated-scheds in misc/

* Proxymanager now able to be run standalone as standard system init daemon. This is so base certs need not be owned or readable by the APF user. 

* Added email notification of factory owner when no valid proxy can be retrieved from the proxymanager. 

* Eliminated all _readconfig() methods in submit plugins. Switched to full initialization during __init__.

* MyProxy support in proxymanager. Allows retrieval of base proxy from MyProxy using passphrase, or using another proxymanager profile proxy for auth.

* fixed bug in Scale sched plugin returning 0 when n*factor < 1. 

* minimum Condor version check. Allows particular plugins to specify minimum. Failure aborts. 

* multiproxy functionality. Allow multiple proxy profiles. proxymanager tries all until one is found. failure generates email.  

* scripts and config files added for logs monitor apf-search-failed
