@@ -4,7 +4,7 @@ __author__ = "Graeme Andrew Stewart, John Hover, Jose Caballero"
 __copyright__ = "2007,2008,2009,2010 Graeme Andrew Stewart; 2010-2014 John Hover; 2010-2014 Jose Caballero"
 __credits__ = []
 __license__ = "GPL"
-__version__ = "2.3.1-scalefix"
+__version__ = "2.3.1-scalefix-2"
 __maintainer__ = "Jose Caballero"
 __email__ = "jcaballero@bnl.gov,jhover@bnl.gov"
 __status__ = "Production"
