@@ -24,7 +24,8 @@ class CondorNordugridBatchSubmitPlugin(CondorCEBatchSubmitPlugin):
         try:
             self.gridresource = qcl.generic_get(self.apfqname, 'batchsubmit.condornordugrid.gridresource') 
             self.nordugridrsl = self._nordugridrsl(qcl)
-            self.nordugridrsl_env = self._nordugridrsl_env(qcl)
+            self.nordugridrsladdenv = self._nordugridrsl_addenv(qcl)
+            #self.nordugridrsl_env = self._nordugridrsl_env(qcl)
         except Exception, e:
             self.log.error("Caught exception: %s " % str(e))
             raise
@@ -67,26 +68,36 @@ class CondorNordugridBatchSubmitPlugin(CondorCEBatchSubmitPlugin):
         self.log.debug('Leaving with value = %s.' %out)
         return out 
 
-    def _nordugridrsl_env(self, qcl):
-
-        nordugridrsl_env = " (environment = " 
-        nordugridrsl_env += "('APFFID' '%s') " % self.factoryid
-        nordugridrsl_env += "('PANDA_JSID' '%s') " % self.factoryid
-        nordugridrsl_env += "('GTAG' '%s/$(Cluster).$(Process).out') " % self.logUrl
-        nordugridrsl_env += "('APFCID' '$(Cluster).$(Process)') " 
-        nordugridrsl_env += "('APFMON' '%s') " % self.monitorurl
-        nordugridrsl_env += "('FACTORYQUEUE' '%s') " % self.apfqname
-        nordugridrsl_env += "('FACTORYUSER' '%s') " % self.factoryuser
-
+    def _nordugridrsl_addenv(self, qcl):
         # the next is for tagas like 
         #       ('RUCIO_ACCOUNT' 'pilot')
         # inside the environment tag
+        
+        out= " "
         for opt in qcl.options(self.apfqname):
             if opt.startswith('nordugridrsl.addenv.'):
                 key = opt.split('nordugridrsl.addenv.')[1]
                 value = qcl.generic_get(self.apfqname, opt)
                 if value != "":
-                    nordugridrsl_env += "('%s' '%s')" %(key, value)
+                    out += "('%s' '%s')" %(key, value) 
+                           
+        self.log.debug('Leaving with value = %s.' %out)
+        return out
+
+    def _nordugridrsl_env(self):
+
+        # open the environment tag
+        nordugridrsl_env = "( "
+        
+        nordugridrsl_env = " (environment = " 
+        nordugridrsl_env += "('APFFID' '%s') " % self.factoryid
+        nordugridrsl_env += "('PANDA_JSID' '%s') " % self.factoryid
+        nordugridrsl_env += "('APFCID' '$(Cluster).$(Process)') " 
+        nordugridrsl_env += " ('GTAG' '%s/$(Cluster).$(Process).out') " % self.logUrl
+        nordugridrsl_env += "('APFMON' '%s') " % self.monitorurl
+        nordugridrsl_env += "('FACTORYQUEUE' '%s') " % self.apfqname
+        nordugridrsl_env += "('FACTORYUSER' '%s') " % self.factoryuser
+        nordugridrsl_env += " %s " % self.nordugridrsladdenv
 
         # closing the environment tag
         nordugridrsl_env += ") "
@@ -98,7 +109,6 @@ class CondorNordugridBatchSubmitPlugin(CondorCEBatchSubmitPlugin):
         '''
         add things to the JSD object
         '''
-    
         self.log.debug('CondorNordugridBatchSubmitPlugin.addJSD: Starting.')
    
         self.JSD.add('grid_resource', 'nordugrid %s' %self.gridresource)
@@ -106,8 +116,9 @@ class CondorNordugridBatchSubmitPlugin(CondorCEBatchSubmitPlugin):
         nordugridrsl = "" 
         if self.nordugridrsl:
             nordugridrsl = self.nordugridrsl
-        nordugridrsl += self.nordugridrsl_env
-        self.JSD.add('nordugrid_rsl', '%s' %nordugridrsl) 
+            nordugridrsl += self._nordugridrsl_env()
+        
+        self.JSD.add('nordugrid_rsl', '%s' % nordugridrsl) 
 
         super(CondorNordugridBatchSubmitPlugin, self)._addJSD() 
     
